crates/rstest-bdd/tests/ui_macros/placeholder_missing_params.stderr
error: invalid step function signature: missing step arguments for placeholders: a, b, c

         = help: Use a step attribute (such as `#[given]`) on `fn name(...args...)` with supported step arguments/fixtures (step attributes include `#[given]`, `#[when]`, and `#[then]`); remove `self` if present.

 --> tests/ui_macros/placeholder_missing_params.rs:5:4
  |
5 | fn missing_multi() {}
  |    ^^^^^^^^^^^^^

error: invalid step function signature: missing step arguments for placeholders: v

         = help: Use a step attribute (such as `#[given]`) on `fn name(...args...)` with supported step arguments/fixtures (step attributes include `#[given]`, `#[when]`, and `#[then]`); remove `self` if present.

 --> tests/ui_macros/placeholder_missing_params.rs:8:4
  |
8 | fn missing_single() {}
  |    ^^^^^^^^^^^^^^

error: invalid step function signature: missing step arguments for placeholders: x, y

         = help: Use a step attribute (such as `#[given]`) on `fn name(...args...)` with supported step arguments/fixtures (step attributes include `#[given]`, `#[when]`, and `#[then]`); remove `self` if present.

  --> tests/ui_macros/placeholder_missing_params.rs:11:4
   |
11 | fn missing_two_of_three(_z: u32) {}
   |    ^^^^^^^^^^^^^^^^^^^^
